--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <script src="node_modules/rxjs/bundles/Rx.js"></script>
     <script src="node_modules/angular2/bundles/angular2.dev.js"></script>
     <script src="node_modules/angular2/bundles/http.dev.js"></script>
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
+	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src="node_modules/angular2/es6/dev/src/testing/shims_for_IE.js"></script>
-    <!--script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>!-->
-
-
+	
     <script>
         System.config({
         packages: {        
@@ -30,7 +30,30 @@
 </head>
 
 <body>
-    <app>Loading...</app>
-</body>
+    <app>Loading...</app>  
+</div>
 
+<div class="container">
+  <!-- Modal -->
+  <div class="modal fade" id="loadingModal" role="dialog">
+    <div class="modal-dialog">
+    
+      <!-- Modal content-->
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal">&times;</button>
+          <h4 class="modal-title">Loading</h4>
+        </div>
+        <div class="modal-body">
+          <p>Please wait....</p>
+        </div>
+      </div>
+      
+    </div>
+  </div>
+  
+</div>
+
+	
+</body>
 </html>
