--- a/index.html
+++ b/index.html
@@ -30,14 +30,13 @@
 </head>
 
 <body>
-    <app>Loading...</app>  
-</div>
+    <app></app>
 
 <div class="container">
   <!-- Modal -->
   <div class="modal fade" id="loadingModal" role="dialog">
     <div class="modal-dialog">
-    
+
       <!-- Modal content-->
       <div class="modal-content">
         <div class="modal-header">
@@ -47,12 +46,11 @@
           <p>Please wait....</p>
         </div>
       </div>
-      
+
     </div>
   </div>
-  
+
 </div>
 
-	
 </body>
 </html>
