DIY-73 // Move the categories grid and Refinement components under the Locations Identification tab

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 }
 </style>
 <!DOCTYPE html>
-<html style="height: 100%">
+<html style="height: 100%;min-width:584px">
     <head>
         <title>Mobile Settings</title>
         <script src="node_modules/es6-shim/es6-shim.min.js"></script>
@@ -24,6 +24,7 @@
         <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
         <script src="node_modules/angular2/es6/dev/src/testing/shims_for_IE.js"></script>
         <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
+
         <script>
             System.config({
                 packages: {
